--- a/aboutme.html
+++ b/aboutme.html
@@ -16,24 +16,23 @@
         </nav>
     </header>
     <main class="presentacion">
-        <section class="presentacion_contenido">
-            <h1 class="presentacion_contenido_titulo">Sobre mí</h1>
-            <p class="presentacion_contenido_texto">
+        <section class="presentacion__contenido">
+            <h1 class="presentacion__contenido__titulo">Sobre mí</h1>
+            <p class="presentacion__contenido__texto">
                 Soy Kevin Sierra, ingeniero de sistemas en formación con experiencia en desarrollo de software, 
                 seguridad informática y metodologías ágiles. Mi enfoque está en la creación de soluciones tecnológicas 
                 que optimicen procesos y agreguen valor a las organizaciones, siempre con un alto compromiso en la 
                 protección de datos y la estabilidad de las aplicaciones.
             </p>
-            <p class="presentacion_contenido_texto">
+            <p class="presentacion__contenido__texto">
                 Me destaco por mis habilidades en programación con Java, Python, C++ y JavaScript, además de mi 
                 capacidad para adaptarme rápidamente a entornos cambiantes. Tengo un fuerte interés en el desarrollo 
                 seguro de software y la implementación de estrategias para fortalecer la ciberseguridad en los sistemas 
                 informáticos. Apasionado por la innovación y el aprendizaje continuo, busco siempre mejorar mis 
-                conocimientos y contribuir con soluciones eficientes. Con habilidades en el uso de herramientas tales como:
-                LaTex y Matlab. 
+                conocimientos y contribuir con soluciones eficientes. Con habilidades en el uso de herramientas de LaTex y Matlab. 
             </p>
         </section>
-        <img class="presentacion_imagen" src="./assets/Imagen.PNG" alt="Imagen de Kevin Sierra">
+        <img class="presentacion__imagen" src="./assets/Imagen.PNG" alt="Imagen de Kevin Sierra">
     </main>
     <footer class="footer">
         <p>Desarrollado por Kevin Sierra - 2025</p>
